src/syntax/bibtex/snapshots/texlab__syntax__bibtex__parser__tests__string_casing.snap
---
source: src/syntax/bibtex/parser.rs
expression: "setup(r#\"@STRING{foo = \"Hello World\"}\"#)"

---
ROOT@0..28
  STRING@0..28
    STRING_TYPE@0..7 "@STRING"
    L_CURLY@7..8 "{"
    WORD@8..11 "foo"
    WHITESPACE@11..12 " "
    EQUALITY_SIGN@12..13 "="
    WHITESPACE@13..14 " "
    VALUE@14..27
      TOKEN@14..27
        QUOTE_GROUP@14..27
          QUOTE@14..15 "\""
          WORD@15..20 "Hello"
          WHITESPACE@20..21 " "
          WORD@21..26 "World"
          QUOTE@26..27 "\""
    R_CURLY@27..28 "}"

