src/syntax/bibtex/snapshots/texlab__syntax__bibtex__parser__tests__string_complete.snap
---
source: src/syntax/bibtex/parser.rs
expression: "setup(r#\"@string{foo = {Hello World}}\"#)"

---
ROOT@0..28
  STRING@0..28
    STRING_TYPE@0..7 "@string"
    L_CURLY@7..8 "{"
    WORD@8..11 "foo"
    WHITESPACE@11..12 " "
    EQUALITY_SIGN@12..13 "="
    WHITESPACE@13..14 " "
    VALUE@14..27
      TOKEN@14..27
        BRACE_GROUP@14..27
          L_CURLY@14..15 "{"
          WORD@15..20 "Hello"
          WHITESPACE@20..21 " "
          WORD@21..26 "World"
          R_CURLY@26..27 "}"
    R_CURLY@27..28 "}"

