src/syntax/bibtex/snapshots/texlab__syntax__bibtex__parser__tests__string_missing_quote.snap
---
source: src/syntax/bibtex/parser.rs
expression: "setup(r#\"@STRING{foo = \"Hello World}\"#)"

---
ROOT@0..27
  STRING@0..27
    STRING_TYPE@0..7 "@STRING"
    L_CURLY@7..8 "{"
    WORD@8..11 "foo"
    WHITESPACE@11..12 " "
    EQUALITY_SIGN@12..13 "="
    WHITESPACE@13..14 " "
    VALUE@14..26
      TOKEN@14..26
        QUOTE_GROUP@14..26
          QUOTE@14..15 "\""
          WORD@15..20 "Hello"
          WHITESPACE@20..21 " "
          WORD@21..26 "World"
          MISSING@26..26 ""
    R_CURLY@26..27 "}"

